Don't need to sudo restart minecraft

--- a/restart-minecraft.yml
+++ b/restart-minecraft.yml
@@ -3,8 +3,6 @@
   gather_facts: No
   user: minecraft
   sudo: no
-  vars:
-    - shared: /vagrant
   handlers:
     - name: restart minecraft
       service: name=minecraft state=restarted
@@ -12,3 +10,4 @@
     - name: restart
       shell: echo "Restarting."
       notify: restart minecraft
+      sudo: no
